implement export data and send mail with attachment.

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,5 +14,7 @@
 </head>
 <body>
     <h2>Home Page</h2>
+    <a href="{% url 'import_data' %}">Import Data</a>
+    <a href="{% url 'export_data' %}">Export Data</a>
 </body>
 </html>
