--- a/templates/dataentry/import_data.html
+++ b/templates/dataentry/import_data.html
@@ -1,45 +1,33 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Import Data</title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+{% extends 'base.html' %}
+{% block content %}
+<div class="container mt-5 alert-primary shadow" style="max-width: 600px;padding: 50px; border-radius: 10px;">
+    <h3 class="text-center">Import Data to Database Tables</h3>
+    <form action="{% url 'import_data' %}" method="POST" enctype="multipart/form-data"
+        style="max-width: 600px; margin:auto; padding-top: 50px;">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="file_path">Upload CSV File</label>
+            <input type="file" name="file_path" class="form-control" required>
+        </div>
 
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <div class="form-group">
+            <label for="model_name">Select Database Table</label>
+            <select name="model_name" class="form-control" required>
+                <option value="" disabled selected>Select</option>
+                {% for model in custom_models %}
+                <option value="{{model}}">{{model}}</option>
+                {% endfor %}
+            </select>
+        </div>
 
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="{% static 'js/custom.js' %}"></script>
-</head>
-<body>
-    <div class="container">
-        <h3 class="text-center">Import Data to Database Tables</h3>
-        <form action="{% url 'import_data' %}" method="POST" enctype="multipart/form-data" style="max-width: 600px; margin:auto; padding-top: 50px;">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="file_path">Upload CSV File</label>
-                <input type="file" name="file_path" class="form-control" required>
-            </div>
-
-            <div class="form-group">
-                <label for="model_name">Select Database Table</label>
-                <select name="model_name" class="form-control" required>
-                    <option value="" disabled selected>Select</option>
-                    {% for model in custom_models %}
-                        <option value="{{model}}">{{model}}</option>
-                    {% endfor %}
-                </select>
-            </div>
-
+        <div class="form-group">
             <input type="submit" value="Import Data" class="btn btn-primary">
+        </div>
 
-            <br>
+        <br>
 
-            {% include 'alerts.html' %}
-        </form>
-    </div>
-</body>
-</html>
+        {% include 'alerts.html' %}
+    </form>
+</div>
+
+{% endblock %}
