--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container" style="padding: 50px;">
+    {% if user.is_authenticated %}
     <h2 class="text-center">Automate The Boring Stuff With Django</h2>
     <div class="row pt-5">
         <!-- Import data -->
@@ -88,6 +89,15 @@
             </a>
         </div>
     </div>
+    {% else %}
+    <div class="home-info">
+        <h2 class="text-center">Automate The Boring Stuff With Django</h2>
+        <div style="justify-content: center; display: flex;">
+            <a href="{% url 'login' %}" class="btn btn-primary">LOGIN</a>
+            &nbsp;<a href="{% url 'register' %}" class="btn btn-success">REGISTER</a>
+        </div>
+    </div>
+    {% endif %}
 </div>
 
 
